
- #8692: Remove Misc.may_map and similar
  (Leo White, review by Gabriel Scherer and Thomas Refis)

- #8677: Use unsigned comparisons in amd64 and i386 emitter of Lcondbranch3.
  (Greta Yorsh, review by Xavier Leroy)

- #8766: Parmatch: introduce a type for simplified pattern heads
  (Gabriel Scherer and Thomas Refis, review by Stephen Dolan and
   Florian Angeletti)

### Code generation and optimizations:

- #8672: Optimise Switch code generation on booleans.
  (Stephen Dolan, review by Pierre Chambart)

- #2322: Add pseudo-instruction `Ladjust_trap_depth` to replace
  dummy Lpushtrap generated in linearize
  (Greta Yorsh and Vincent Laviron, review by Xavier Leroy)

- #8707: Simplif: more regular treatment of Tupled and Curried functions
  (Gabriel Scherer, review by Leo White and Alain Frisch)

- #8526: Add compile-time option -function-sections in ocamlopt to emit
  each function in a separate named text section on supported targets.
  (Greta Yorsh, review by Pierre Chambart)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

- #8691: Allocation functions are now guaranteed not to trigger any
   OCaml callback when called from C.
   (Jacques-Henri Jourdan, review by Stephen Dolan and Gabriel Scherer)

### Tools:

* #6792, #8654 ocamldebug now supports program using Dynlink. This
   breaks compatibility with emacs modes.
   (Whitequark and Jacques-Henri Jourdan, review by Gabriel Scherer
    and Xavier Clerc)

### Standard library:

- #8657: Optimization in [Array.make] when initializing with unboxed
   or young values.
   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)

- #8634: Statistical memory profiling provided by the Gc.Memprof
   module.